<resources>
    <string name="app_name">E-Library</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Genres</string>
    <string name="menu_slideshow">My Account</string>
    <string name="rec">Recommendations for you   ></string>
    <string name="pop">Popular books   ></string>
    <string name="str1">name</string>
    <string name="str2">name</string>
    <string name="str3">name</string>
    <string name="str4">name</string>
    <string name="str5">name</string>
    <string name="str6">name</string>
    <string name="str7">name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sig In <Up></Up></string>
    <string name="list_fragment_label">Sports</string>
    <string name="news_fragment_label">Sports News</string>

    <string name="annotation_title">Title</string>
    <string name="ant">Annotation</string>
    <string name="sports_info_placeholder">Here is some news</string>
    <string name="annotation_text">An annotation is extra information associated with a particular point in a document or other piece of information. It can be a note that includes a comment or explanation.[1] Annotations are sometimes presented in the margin of book pages. For annotations of different digital media, see web annotation and text annotation.

</string>
    <string name="text1">Solaris is one of the few science fiction novels to be included on the 1001 Books Everyone Must Read Before You Die list. Written in Polish in 1961, for decades the only English edition has been one that was translated from Polish to French then from French to English. </string>
    <string name="text2">Dantes is imprisoned on the island prison of Chateau dIf for 13 years, where he plots revenge against those who betrayed him. With help from another prisoner, he escapes the island and proceeds to transform himself into the wealthy Count of Monte Cristo as part of his plan to exact revenge.</string>
    <string name="text3">The Thorn Birds traces the lives of the members of the Cleary family over the course of three generations, from their poor existence in New Zealand to their eventual move to Australia when a distant relative summons them and promises them a more stable life.</string>
    <string name="text4">Dracula, Gothic novel by Bram Stoker, published in 1897, that was the most popular literary work derived from vampire legends and became the basis for an entire genre of literature and film. Dracula comprises journal entries, letters, and telegrams written by the main characters.</string>
    <string name="text5">"The Martian" is the debut novel by American writer Andy Weier in the genre of fiction. The novel centers on astronaut Mark Whatley, who was left alone on Mars due to the circumstances. He has to show imagination and apply all his knowledge to survive and try to return to Earth.</string>
    <string name="text6">The Return of Sherlock Holmes is a collection of 13 detective stories by Arthur Conan Doyle, published in 1905 and consisting of stories written in 1903-1904. Forced "resurrection" of Holmes: in 1891, the main character "died" in the Reichenbach Falls.</string>
    <string name="text7">Erich Fromm is the greatest thinker of the XX century, one of the great cohort of "philosophers from psychology" and the spiritual leader of the Frankfurt School of Sociology. The works of E. Fromm are always relevant, because the main theme of his research was the disclosure.</string>

    <string name="text8">"The Little Prince" is an allegorical tale—tale, the most famous work of Antoine de Saint-Exupery. The fairy tale tells about a Little Prince who visits various planets in space, including Earth. The book addresses the themes of loneliness, friendship, love and loss.</string>

    <string name="book1">The Theory of Everything</string>
    <string name="book2">Nightwork</string>
    <string name="book3">Thus Spake </string>
    <string name="book4">The Picture of Dorian Gray</string>
    <string name="book5">East of Eden</string>
    <string name="book6">Arch of Triumph</string>
    <string name="book7">The Little Lady of Big House</string>

    <string name="book8">Solaris</string>
    <string name="book9">The Count of Monte Cristo</string>
    <string name="book10">The Thorn Birds</string>
    <string name="book11">Dracula</string>
    <string name="book12">The Martian</string>
    <string name="book13">The Return of Sherlock Holmes</string>
    <string name="book14">The Art Of Being</string>
    <string name="book15">The Little Prince</string>

    <string name="author8">Stanislav Lem</string>
    <string name="author9">Alexander Dumas</string>
    <string name="author10">Colleen McCullough</string>
    <string name="author11">Bram Stoker</string>
    <string name="author12">Andy Weir</string>
    <string name="author13">Arthur Conan Doyle</string>
    <string name="author14">Erich Fromm</string>
    <string name="author15">Solaris</string>

    <string name="b1_subtitle">Annotation for The Theory of Everything</string>
    <string name="b2_subtitle">Annotation for Nightwork</string>
    <string name="b3_subtitle">Annotation for Thus Spake</string>
    <string name="b4_subtitle">Annotation for The Picture of Dorian Gray</string>
    <string name="b5_subtitle">Annotation for East of Eden</string>
    <string name="b6_subtitle">Annotation for Arch of Triumph</string>
    <string name="b7_subtitle">Annotation for The Little Lady of Big House</string>

    <string name="adventure">Adventure</string>
    <string name="Children">Children</string>
    <string name="Detective">Detective</string>
    <string name="Fantasy">Fantasy</string>
    <string name="Horror">Horror</string>
    <string name="Psychology">Psychology</string>
    <string name="Romance">Romance</string>


    <string name="Welcome">Welcome</string>
    <string name="to">to E-Library</string>
    <string name="dark">Dark mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_login_screen">Login Screen</string>


    <string name="job_success">How many read</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="saved">Saved books:</string>

    <string name="skills">Skills</string>
    <string name="ratings">Ratings</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>
    <string name="title_activity_sign_up_screen">SignUpScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>