<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.e_library.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
<!--        <action-->
<!--            android:id="@+id/action_nav_home_self"-->
<!--            app:destination="@id/nav_home" />-->
    </fragment>

    <fragment
        android:id="@+id/nav_genres"
        android:name="com.example.e_library.ui.genres.GenresFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_genres" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.e_library.ui.account.AccountFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_account" />
</navigation>

