<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="700dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    android:layout_marginTop="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="700dp">

        <ImageView
            android:id="@+id/booksImageDetail"
            android:layout_width="146dp"
            android:layout_height="232dp"
            android:layout_marginTop="12dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2"
            tools:srcCompat="@drawable/img2" />

        <TextView
            android:id="@+id/titleDetail"
            style="@style/BooksTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:fontFamily="serif"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.003"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/annotation_title" />

        <TextView
            android:id="@+id/authorDetails"
            style="@style/BooksDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/ant"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/titleDetail"
            app:layout_constraintTop_toBottomOf="@+id/titleDetail"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/newsDetail"
            style="@style/BooksBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/annotation_text"
            app:layout_constraintTop_toBottomOf="@+id/authorDetails"
            tools:layout_editor_absoluteX="-1dp"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="377dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/mybtn2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/back3_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/save2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="270dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/save3_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.appcompat.widget.Toolbar>

        <Button
            android:id="@+id/button2"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="serif"
            android:text="Read"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="normal"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.945"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newsDetail" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>